--- a/Resources/views/Drop/reportDropForm.html.twig
+++ b/Resources/views/Drop/reportDropForm.html.twig
@@ -1,9 +1,11 @@
 {% form_theme form "IcapDropzoneBundle::form_theme_bootstrap3.html.twig" %}
 
-<form class="form-horizontal" method="POST" action="{{ path('icap_dropzone_report_drop', {'correctionId':correction.id}) }}">
+<form class="form-horizontal" method="POST"
+      action="{{ path('icap_dropzone_report_drop', {'correctionId':correction.id}) }}">
     {{ form_errors(form) }}
 
     <p>{{ 'You are about to report a copy. This action is not without consequence.'|trans({}, 'icap_dropzone') }}</p>
+
     <p>{{ 'This ends your correction and assigns zero to the copy. Are you sure you want to do this?'|trans({}, 'icap_dropzone') }}</p>
 
     <div class="row">
@@ -16,9 +18,11 @@
     </div>
 
     <br/>
+
     <div class="container form-group form-buttons">
         <div class="btn-group pull-right">
-            <a href="{{ path('icap_dropzone_correct', {'resourceId': dropzone.id, 'dropId': drop.id}) }}" class="btn btn-default">
+            <a href="{{ path('icap_dropzone_correct', {'resourceId': dropzone.id, 'dropId': drop.id}) }}"
+               class="btn btn-default">
                 {{ 'Cancel'|trans({}, 'icap_dropzone') }}
             </a>
             <button type="submit" class="btn btn-danger">
@@ -26,7 +30,6 @@
             </button>
         </div>
     </div>
-{{ form_end(form) }}
+    {{ form_end(form) }}
 
-{% render controller('ClarolineCoreBundle:ResourceType:initPicker') %}
-{{ tinymce_init() }}
+    {{ tinymce_init() }}
