Correction 125% progressbar beug. close #97

--- a/Resources/views/Drop/dropStatus.html.twig
+++ b/Resources/views/Drop/dropStatus.html.twig
@@ -1,7 +1,8 @@
 {% if dropzoneProgress is defined %}
 
-    {#	{{ dump(dropzoneProgress)}}
-        {{dump( dropzoneProgress.states[dropzoneProgress.currentState])}}#}
+    {#{{ dump(dropzoneProgress)}}
+    {{dump( dropzoneProgress.states)}}
+    {{ dump(dropzoneProgress.currentState) }}#}
 
     <h5>{{ 'Dropzone progress'|trans({},'icap_dropzone') }}</h5>
     <div class="progress " style="text-align: center;">
