adding cancel unlock button and link and unlock buttons

--- a/Resources/views/Drop/Examiners/ExaminersByName.htlm.twig
+++ b/Resources/views/Drop/Examiners/ExaminersByName.htlm.twig
@@ -29,10 +29,14 @@
 {% endblock %}
 {% block dropzone_content_drops_by_list_tools %}
     <div class="btn-group text-right">
-        <button type="button" class="btn btn-default btn-xs" data-toggle="tooltip" data-container="body"
-                data-placement="top"
-                title="{{ 'unlock_user_tooltip'|trans({},'icap_dropzone') }}"><span
-                    class="fa fa-unlock-alt">&nbsp;</span>{{ "unlock_all"|trans({},'icap_dropzone') }}</button>
+        <a type="button" class="btn btn-default btn-xs" data-toggle="tooltip" data-container="body"
+           data-placement="top" title="{{ 'unlock_user_tooltip'|trans({},'icap_dropzone') }}"
+           href="{{ path('icap_dropzone_unlock_all_user',{'resourceId':dropzone.id}) }}"><span
+                    class="fa fa-unlock">&nbsp;</span>{{ "unlock_all"|trans({},'icap_dropzone') }}</a>
+
+        <a type="button" class="btn btn-default btn-xs"
+           href="{{ path('icap_dropzone_unlock_cancel',{'resourceId': dropzone.id}) }}">{#<span
+                    class="fa fa-lock">&nbsp;</span>#}{{ "cancel_unlock"|trans({},'icap_dropzone') }}</a>
     </div>
 {% endblock %}
 {% block dropzone_content_drops_by_list_subtitle %}
