--- a/Resources/views/Drop/Listing/examinersListing.html.twig
+++ b/Resources/views/Drop/Listing/examinersListing.html.twig
@@ -56,14 +56,14 @@
                     {% if  needCorrection == 1 %}
                         <a class="btn btn-default btn-xs"
                            href="{{ path('icap_dropzone_unlock_user',{'resourceId':dropzone.id,'userId':user.id}) }}">
-                            <span class="fa fa-unlock-alt">&nbsp;</span>
+                            <span class="fa fa-unlock">&nbsp;</span>
                             {{ 'unlock user'|trans({},'icap_dropzone') }}
                         </a>
                     {% endif %}
                 {% else %}
                     {# <button type="button" class="btn btn-info btn-xs" disabled> #}
                     <a class="btn btn-info btn-xs" disabled>
-                        <span class="fa fa-unlock-alt info">&nbsp;</span>
+                        <span class="fa fa-unlock info">&nbsp;</span>
                         {{ "unlocked user"|trans({},'icap_dropzone') }}
                     </a>
 
