--- a/Resources/views/Drop/drops.html.twig
+++ b/Resources/views/Drop/drops.html.twig
@@ -9,8 +9,13 @@
     <div class="container container-dropzone">
         <h2>
             {{ 'List of copies'|trans({}, 'icap_dropzone') }}
-            <a class=" btn btn-default pull-right" href="{{ path('icap_dropzone_edit', {'resourceId': dropzone.id}) }}"><span
-                        class="fa fa-pencil-square-o"></span> {{ 'Edit evaluation'|trans({}, 'icap_dropzone') }}</a>
+            <div class="btn-group pull-right">
+                <a class=" btn btn-default "
+                   href="{{ path('icap_dropzone_download_copies', {'resourceId': dropzone.id}) }}"><span
+                            class="fa fa-download"></span> {{ 'Download copies'|trans({}, 'icap_dropzone') }}</a>
+                <a class=" btn btn-default " href="{{ path('icap_dropzone_edit', {'resourceId': dropzone.id}) }}"><span
+                            class="fa fa-pencil-square-o"></span> {{ 'Edit evaluation'|trans({}, 'icap_dropzone') }}</a>
+            </div>
         </h2>
 
         {% if unterminated_drops is defined %}
