--- a/Resources/views/Drop/dropsDownloadBetweenDatesModal.html.twig
+++ b/Resources/views/Drop/dropsDownloadBetweenDatesModal.html.twig
@@ -16,3 +16,12 @@
 
 
 </div>
+<script type="text/javascript">
+    $('#btn-dl-copies-by-date').click(function (e) {
+
+        setTimeout(function () {
+            $('#modal-content').modal('hide');
+        }, 1000);
+
+    });
+</script>
