--- a/Resources/views/Drop/dropsDownloadBetweenDates.html.twig
+++ b/Resources/views/Drop/dropsDownloadBetweenDates.html.twig
@@ -1,22 +1,23 @@
 {% extends "IcapDropzoneBundle::layout.html.twig" %}
 {% block resourceBreadcrumb %}
-    <li class="active"><span class="fa fa-file"></span> {{ dropzone.resourceNode.name }}</li>
+    <li>
+        <a href="{{ path('icap_dropzone_drops_by_user',{'resourceId':dropzone.id}) }}"><span
+                    class="fa fa-list"></span>  {{ dropzone.resourceNode.name }}</a>
+    </li>
+    <li class="active"><span class="fa fa-file"></span> {{ 'Download copies'|trans({},'icap_dropzone') }}</li>
 {% endblock %}
 
 {% block dropzone_content %}
     <div class="container">
         <h3>
-            {{ 'Warning'|trans({}, 'icap_dropzone') }}
+            {{ 'Download between two dates'|trans({}, 'icap_dropzone') }}
         </h3>
-        {% include "IcapDropzoneBundle:Dropzone:dropsDownloadBetweenDatesForm.html.twig" %}
-        <div class="row">
-            <div class="col-md-4 col-md-offset-6 "></div>
 
-            <a id="form-submit" class="btn btn-primary"
-               href="{{ path('icap_dropzone_download_copies',{'resourceId':dropzone.id}) }}">
-                {{ 'Download copies'|trans({}, 'icap_dropzone') }}
-            </a>
+        <div class=" col-md-8 ">
+
+            {% include "IcapDropzoneBundle:Drop:dropsDownloadBetweenDatesForm.html.twig" %}
         </div>
+
     </div>
     <br>
     </div>
