--- a/Resources/views/Drop/dropsDownloadBetweenDatesForm.html.twig
+++ b/Resources/views/Drop/dropsDownloadBetweenDatesForm.html.twig
@@ -22,9 +22,9 @@
 
     <div class="container ">
         <div class="modal-footer">
-            <div class="btn-group">
+            <div class="btn-group ">
                 {#<button class="btn btn-default" data-dismiss="modal" aria-hidden="true">{{ 'Cancel'|trans({}, 'icap_dropzone') }}</button>#}
-                <button type="submit" class="btn btn-default">
+                <button id="btn-dl-copies-by-date" type="submit" class="btn btn-default">
                         <span
                                 class="fa fa-download"> </span> {{ 'Download copies in this period'|trans({}, 'icap_dropzone') }}
                 </button>
